tests/pass/no-unimported-text-combined.tsx
import Label, { Text } from "@/components/ui/text";

const view = <Text />;
