tests/fail/no-unimported-text-inline-type.tsx
import { type Text } from "@/components/ui/text";

const view = <Text />;
